src/components/toaster/toaster.css
.dc-toasts-list {
  --padding: 16px;
  --animation: 200ms ease;

  position: fixed;
  right: var(--padding);
  left: var(--padding);
  z-index: var(--z-index);
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  pointer-events: none;
  color-scheme: light;
  list-style: none;
}

.dc-toasts-list_top-left,
.dc-toasts-list_top-center,
.dc-toasts-list_top-right {
  top: var(--padding);
}

.dc-toasts-list_bottom-left,
.dc-toasts-list_bottom-center,
.dc-toasts-list_bottom-right {
  bottom: var(--padding);
}

.dc-toasts-list > * {
  position: absolute;
  right: 0;
  left: 0;
  transition: transform var(--animation);
}

.dc-toasts-list_top-left > *,
.dc-toasts-list_bottom-left > * {
  text-align: left;
}

.dc-toasts-list_top-center > *,
.dc-toasts-list_bottom-center > * {
  text-align: center;
}

.dc-toasts-list_top-right > *,
.dc-toasts-list_bottom-right > * {
  text-align: right;
}

.dc-toasts-list__toast {
  pointer-events: all;
  animation: var(--animation) forwards;
}

@keyframes dc-toast-slide-top {
  0% {
    opacity: 0;
    transform: translateY(-100%);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.dc-toasts-list_top-left .dc-toasts-list__toast,
.dc-toasts-list_top-center .dc-toasts-list__toast,
.dc-toasts-list_top-right .dc-toasts-list__toast {
  animation-name: dc-toast-slide-top;
}

@keyframes dc-toast-slide-bottom {
  0% {
    opacity: 0;
    transform: translateY(0);
  }

  100% {
    opacity: 1;
    transform: translateY(-100%);
  }
}

.dc-toasts-list_bottom-left .dc-toasts-list__toast,
.dc-toasts-list_bottom-center .dc-toasts-list__toast,
.dc-toasts-list_bottom-right .dc-toasts-list__toast {
  animation-name: dc-toast-slide-bottom;
}

.dark .dc-toaster,
.dark.dc-toaster {
  color-scheme: dark;
}

